Fixsyntaxes